# zephyr

./: .gitignore  15.4_echo_test.sh  CMakeLists.txt  CODEOWNERS  Kconfig.zephyr  MAINTAINERS.yml  TODO.txt  babblesim_manifest.yml  dragoon_build_status.txt  get_maintainer.py  simu_regression_tests.txt  simu_regression_tests_53_net.txt  west.yml
.github/workflows/: doc-build.yml
arch/: Kconfig
arch/arm/core/: irq_manage.c
arch/posix/: CMakeLists.txt
arch/posix/core/: CMakeLists.txt  bottom.c  lct.c  ler_compat.c  posix_core.c  posix_core_nsi.c  swap.c  thread.c
arch/posix/include/: bottom_if.h  lct_if.h  posix_cheats.h  posix_core.h  posix_trace.h
arch/x86/include/: kernel_arch_func.h
boards/native/nrf_bsim/: Kconfig  Kconfig.defconfig  nrf54l15bsim_nrf54l15_cpuapp.dts
boards/nordic/nrf54l15pdk/: nrf54l15_cpuapp_common.dtsi
boards/posix/common/: natsim_config.cmake
boards/posix/doc/: arch_soc.rst
boards/posix/linux_emb_runner/: CMakeLists.txt  Kconfig  Kconfig.defconfig  board_soc.h  cmdline.c  cmdline.h  cmdline_common.h  cpu_wait.c  finnish_build.sh  hw_models_top.h  irq_ctrl.c  irq_handler.c  irq_handler.h  ler_if.c  ler_sc.dts  ler_sc.yaml  ler_sc_defconfig  posix_arch_if.c  timer_model.h  tracing.c
boards/posix/linux_emb_runner/doc/: index.rst
boards/posix/linux_runner_sc/: CMakeLists.txt  cmdline.h  finnish_build.sh  linker_symbols_to_localize  linux_runner_sc.yaml  native_posix_64.yaml
boards/posix/linux_runner_sc/runner/: CMakeLists.txt  finnish_build.sh
boards/posix/native_posix/: CMakeLists.txt  Kconfig  Kconfig.defconfig  main.c
boards/posix/native_sim/: CMakeLists.txt
boards/posix/native_sim/doc/: index.rst
boards/posix/natsim_sc/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  board_irq.h  board_soc.h  cmdline.c  cmdline.h  cmdline_common.h  cpu_wait.c  finnish_build.sh  irq_handler.c  irq_handler.h  misc.c  native_posix_compat.c  native_posix_compat.h  natsim_sc.yaml  natsim_sc_64.dts  natsim_sc_64.yaml  natsim_sc_64_defconfig  natsim_sc_defconfig  nsi_if.c  posix_arch_if.c  timer_model.h
boards/posix/natsim_sc/doc/: index.rst
boards/posix/nrf52_bsim/: CMakeLists.txt  Kconfig  board_irq.h  find_babblesim.cmake  irq_handler.c
boards/posix/nrf_bsim/: CMakeLists.txt  Kconfig.defconfig  argparse.c  nrf5340bsim_nrf5340_cpuapp.dts  nrf5340bsim_nrf5340_cpunet.dts
cmake/compiler/clang/: target.cmake
cmake/compiler/host-gcc/: target.cmake
cmake/linker/ld/: target_base.cmake
cmake/linker/lld/: linker_flags.cmake
drivers/clock_control/: CMakeLists.txt  Kconfig.nrf  nrf_clock_calibration.c  nrf_power_clock.c
drivers/console/: CMakeLists.txt  Kconfig  ler_console.c
drivers/counter/: Kconfig.stm32_rtc  counter_nrfx_rtc.c  counter_nrfx_timer.c
drivers/display/: Kconfig.sdl
drivers/entropy/: CMakeLists.txt  Kconfig.native_posix  fake_entropy_native_bottom.c  fake_entropy_native_bottom.h  fake_entropy_native_posix.c
drivers/ethernet/: Kconfig.native_posix  eth_native_posix.c  eth_native_posix_adapt.c  eth_native_posix_priv.h
drivers/flash/: flash_simulator.c
drivers/ieee802154/: Kconfig.kw41z
drivers/sensor/nrf5/: temp_nrf5.c
drivers/serial/: Kconfig.native_posix
drivers/timer/: nrf_grtc_timer.c  nrf_rtc_timer.c
drivers/usb/device/: usb_dc_nrfx.c
dts/arm/nordic/: nrf51822.dtsi  nrf52805.dtsi  nrf52810.dtsi  nrf52811.dtsi  nrf52820.dtsi  nrf52832.dtsi  nrf52833.dtsi  nrf52840.dtsi  nrf5340_cpuapp_peripherals.dtsi  nrf5340_cpunet.dtsi  nrf54l15_cpuapp_peripherals.dtsi  nrf91_peripherals.dtsi
dts/bindings/timer/: nordic,nrf-timer.yaml
include/: fs.h
include/arch/posix/: arch.h  linker.ld
include/drivers/clock_control/: nrf_clock_control.h
include/logging/: log_backend_native.h
include/posix/: unistd.h
include/zephyr/: kernel.h
include/zephyr/net/: socket_types.h
include/zephyr/posix/: time.h
lib/: CMakeLists.txt
lib/gui/lvgl/: Kconfig
lib/libc/: Kconfig
lib/libc/common/: Kconfig
lib/posix/: CMakeLists.txt  Kconfig  fs.c
lib/updatehub/: Kconfig
linux_embedded_runner/: Makefile  TODO.txt  finnish_build.sh  ler_config.h
linux_embedded_runner/other/: linker_script.pre.ld
linux_embedded_runner/src/: hw_counter.c  hw_models_top.c  irq_ctrl.c  lce.c  lct.c  ler_cmdline.c  ler_cmdline_common.c  ler_internal.h  ler_safe_call.h  ler_tasks.c  ler_tasks.h  ler_trace.c  ler_utils.h  main.c  native_rtc.c  timer_model.c
linux_embedded_runner/src/include/: cpu_ler_if.h  hw_counter.h  hw_models_top.h  lce_if.h  lct_if.h  ler_cmdline.h  ler_cmdline_common.h  ler_cpu0_interrupts.h  ler_cpu_if.h  ler_hw.h  ler_main.h  ler_timer_model.h  ler_tracing.h  native_rtc.h
misc/: Kconfig
modules/: Kconfig.simplelink  Kconfig.st  Kconfig.tinycbor
modules/hal_nordic/nrfx/: CMakeLists.txt
native_simulator/: Makefile
native_simulator/common/other/: linker_script.pre.ld
native_simulator/common/src/: hw_models_top.c  main.c  nce.c  nct.c  nsi_hw_scheduler.c  nsi_tasks.c  nsi_tasks.h  nsi_utils.h
native_simulator/native/src/: hw_counter.c  irq_ctrl.c  native_rtc.c  nsi_cmdline.c  nsi_cmdline_common.c  nsi_trace.c  timer_model.c
samples/net/updatehub/: prj.conf
scripts/: sanitycheck
soc/posix/inf_clock/: CMakeLists.txt  Kconfig  native_tasks.c  posix_native_task.h  posix_soc.h  soc.c  soc.h
submanifests/: README.txt
submanifests/bsim/: notes.txt
subsys/bluetooth/controller/: Kconfig  Kconfig.ll_sw_split
subsys/cpp/: Kconfig
subsys/logging/: CMakeLists.txt  Kconfig  log_backend_native.c  log_core.c  log_output.c
subsys/testsuite/ztest/: CMakeLists.txt
tests/: Kconfig
tests/bsim/: build_parallel.sh  compile.common  run_parallel.sh  thoughts
tests/drivers/build_all/: sensors_i_z.conf  sensors_stmemsc.conf  sensors_stmemsc_trigger.conf  sensors_trigger_i_z.conf
tests/drivers/clock_control/: nrf_lfclk_rc.conf
tests/lib/c_lib/: testcase.yaml
tests/misc/test_build/: testcase.yaml
tests/posix/common/: testcase.yaml
tests/posix/eventfd/: testcase.yaml
tests/posix/eventfd_basic/: testcase.yaml
tests/posix/fs/: CMakeLists.txt  testcase.yaml
(+90 files in other folders)
